# take-home-task

./: .gitignore  CLAUDE.md  compliance_report.json  compliance_report_fails_one.json  compliance_report_final.json  hello.py  pyproject.toml
.uv/: uv.toml
computer_vision_task/: README.md
computer_vision_task/data/sop/: ~$iginal.docx
frontend_task/: README.md  package-lock.json
frontend_task/colab_frontend/: tailwind.config.ts
regulation_task/: README.md  compliance_report.json  fix_db.py  main.py  migrate_to_langchain.py  test_compliance_report.json  test_flask.py  test_import.py  test_search.py
regulation_task/data/sop/: fails_one.docx  sop.docx  sop.txt  ~$ils_one.docx
regulation_task/regulatory_compliance_processor/: __init__.py  config.py  main.py
regulation_task/regulatory_compliance_processor/analysis/: compliance_analyzer.py
regulation_task/regulatory_compliance_processor/data/: document_db  processing_checkpoint.json
regulation_task/regulatory_compliance_processor/knowledge_base/: document_store.py  embeddings.py  langchain_vector_store.py  vector_store.py  vector_store_factory.py
regulation_task/reports/: compliance_report_fails_one.json  compliance_report_final_v2.json  report.json  report_rebuild.json  search_test_results.json
regulation_task/scripts/: add_regulation.py  fresh_rebuild.py  list_regulations.py  rebuild_vector_store.py  remove_regulation.py  smart_rebuild.py
regulation_task/test/: cleaned_14_cfr_part_77.md  output-REG-ANSI-A92-2.md  output-REG-ANSI-A92-2_cleaned.md  output.md  test_doctly.py
(+83 files in other folders)
